# uk-invitation-letter

./: .gitignore  .releaserc  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml  texlive-packages.txt
src/: invitation.py  model.py  util.py
src/invitation/: builder.py  main.py  model.py  template.py  template.yml  util.py
src/invitation/templates/: invitation.tex.jinja  letter.tex.jinja
templates/: invitation.tex.jinja  letter.tex.jinja
tests/: conftest.py  test_model.py  test_render.py  test_template.py  test_util.py
