[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "uk-invitation-letter"
version = "0.0.0"  # dynamic version
license = "LGPL-3.0-or-later"
authors = ["Timur Iskhakov <me@timur.is>"]
description = "UK visa invitation letter generator."
readme = "README.md"
repository = "https://github.com/iskhakovt/uk-invitation-letter"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
packages = [
    { include = "invitation", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.3"
phonenumbers = "8.13.27"
PyYAML = "6.0.1"

[tool.poetry.scripts]
uk-invitation-letter = "invitation.builder:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true
