[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "uk-invitation-letter"
version = "0.0.0"  # dynamic version
license = "LGPL-3.0-or-later"
authors = ["Timur Iskhakov <me@timur.is>"]
description = "UK visa invitation letter generator."
readme = "README.md"
repository = "https://github.com/iskhakovt/uk-invitation-letter"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
packages = [
    { include = "invitation", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.6"
phonenumbers = "^9.0.21"
pydantic = "^2.12.5"
pydantic-yaml = "^1.6.0"

[tool.poetry.scripts]
uk-invitation-letter = "invitation.builder:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[dependency-groups]
test = [
    "ruff (>=0.14.9,<0.15.0)"
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B"]
