[build-system]
requires = ["hatchling>=1.29", "uv-dynamic-versioning>=0.14"]
build-backend = "hatchling.build"

[project]
name = "uk-invitation-letter"
dynamic = ["version"]
license = "MIT"
authors = [{ name = "Timur Iskhakov", email = "me@timur.is" }]
description = "UK visa invitation letter generator."
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "Jinja2>=3.1.6,<4",
    "phonenumbers>=9.0.28,<10",
    "pydantic>=2.13.2,<3",
    "pydantic-yaml>=1.6.0,<2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Repository = "https://github.com/iskhakovt/uk-invitation-letter"

[project.scripts]
uk-invitation-letter = "invitation.main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.11,<0.16.0",
    "pyrefly>=0.61.1,<0.62.0",
    "pytest>=9.0.3,<10",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
dirty = true

[tool.hatch.build.targets.wheel]
packages = ["src/invitation"]

[tool.hatch.build.targets.sdist]
include = [
    "src/invitation",
    "README.md",
    "LICENSE.md",
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"]

[tool.pyrefly]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --strict-markers -m 'not render'"
markers = [
    "render: end-to-end PDF render test (requires latexmk, xelatex, diff-pdf)",
]
