[metadata]
name =  uk-invitation-letter
license_file = LICENSE.md
author = Timur Iskhakov
author_email = iskhakovt@gmail.com
description = UK visa invitation letter generator.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Legal Industry
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = find:
package_dir = = src
include_package_data = true
setup_requires =
    setuptools
install_requires =
    Jinja2 == 2.11.3
    MarkupSafe == 1.1.1
    phonenumbers == 8.12.51
    PyYAML == 5.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    uk-invitation-letter = invitation.builder:main
